--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,24 +4,24 @@
   #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Bio
+  - name: About me
     url: /
     weight: 10
-  - name: Papers
-    url: /#papers
+  - name: Publications
+    url: /#publications
     weight: 11
-  - name: Talks
-    url: /#talks
+  - name: Working Papers
+    url: /#working_papers
     weight: 12
-  - name: News
-    url: /#news
-    weight: 13
-  - name: Experience
-    url: experience/
-    weight: 20
   - name: Projects
-    url: projects/
+    url: /#projects
+    weight: 13
+  - name: Data
+    url: data/
+    weight: 20
+  - name: Contact
+    url: Contact/
     weight: 30
-  - name: Teaching
-    url: teaching/
+  - name: CV
+    url: CV/
     weight: 40
