--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -45,7 +45,7 @@ header:
 # Site footer
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} Edgar Chicurel'
     license:
       enable: true
       allow_derivatives: false
