--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,21 +7,24 @@ main:
   - name: About me
     url: /
     weight: 10
+  - name: Education
+    url: /#education
+    weight: 20
   - name: Publications
     url: /#publications
-    weight: 11
+    weight: 30
   - name: Working Papers
     url: /#working_papers
-    weight: 12
+    weight: 40
   - name: Projects
     url: /#projects
-    weight: 13
+    weight: 50
   - name: Data
     url: /#data
-    weight: 20
+    weight: 60
   - name: Contact
     url: /#contact
-    weight: 30
+    weight: 70
   - name: CV
     url: uploads/cv.pdf
-    weight: 40
+    weight: 80
