--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,24 +7,18 @@ main:
   - name: About me
     url: /
     weight: 10
+  - name: Work
+    url: /#work
+    weight: 20
   - name: Education
     url: /#education
-    weight: 20
-  - name: Publications
-    url: /#publications
     weight: 30
-  - name: Working Papers
-    url: /#working_papers
-    weight: 40
   - name: Projects
     url: /#projects
+    weight: 40
+  - name: Gallery
+    url: /#gallery
     weight: 50
-  - name: Data
-    url: /#data
-    weight: 60
-  - name: Contact
-    url: /#contact
-    weight: 70
   - name: CV
     url: uploads/cv.pdf
     weight: 80
